[package]
name = "tokioexamples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.*", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
] }

[dev-dependencies]
rstest = {version = "0.25.0"}
